add a MAX_NOTIFY variable to limit the number of messages sent in a notification Otherwise osd-notify goes crazy if you have hundreds of new messages

--- a/maildir-indicator.conf
+++ b/maildir-indicator.conf
@@ -42,3 +42,5 @@ MAX_HEADER_LENGTH       = 30
 # Output lots of crud to console.
 DEBUG_ON                = False
 
+# maximum number of messages to include in notification
+MAX_NOTIFY              = 10
